Add more configuration/path coloring

--- a/BetterSanctum.csproj
+++ b/BetterSanctum.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.88.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
   </ItemGroup>
 </Project>
